refactor: migrate from String.format() to String.formatted() Fixes #1353