@@ -217,8 +217,7 @@ public class CSVBind {
 
                       @Override
                       public String apply(String input) {
-                        return String.format(
-                            "self.%s = :%s_%s_", input, field.replace('.', '_'), input);
+                        return "self.%s = :%s_%s_".formatted(input, field.replace('.', '_'), input);
                       }
                     }));
 
