@@ -172,8 +172,7 @@ public class JavaTimeAdapter implements TypeAdapter<Object> {
       } catch (Exception e) {
         final ZonedDateTime dt = ZonedDateTime.now();
         final String val =
-            String.format(
-                "%d-%02d-%02dT%s", dt.getYear(), dt.getMonthValue(), dt.getDayOfMonth(), value);
+            "%d-%02d-%02dT%s".formatted(dt.getYear(), dt.getMonthValue(), dt.getDayOfMonth(), value);
         return toZonedDateTime(val).toLocalTime();
       }
     }
